2006-02-28  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c: Collapse the common parts of
	the "new account" and "edit account" dialog validation code into a
	single routine.  Fixes 117812.

	* src/app-utils/options.scm: Andreas Köhler's patch to correctly
	build a html color value. Fixes 328933.

2006-02-28  Joshua Sled  <jsled@asynchronous.org>

	* src/bin/gnucash-bin.c (gnucash_command_line): Terminate
	GOptionEntry array, preventing warnings and/or errors parsing
	command-line options.

2006-02-28  David Hampton  <hampton@employees.org>

	* configure.in: Set the GNOME_DISABLE_DEPRECATED flag for gnome
	versions up to 2.13.7.

	* src/gnome-utils/dialog-options.c: Allow this one file to use
	deprecated gnome functions, but only when compiled with gtk 2.4.
	Later versions of gtk include the needed replacement function and
	deprecated gnome functions are not allowed.

2006-02-27  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-utils.[ch]: Remove a unused function that
	calls deprecated gnome routines.

	* src/gnome/window-reconcile.c:
	* src/gnome/ui/gnc-reconcile-window-ui.xml:
	* src/gnome/ui/Makefile.am: Convert the reconcile window from the
	old GnomeUIInfo menu/toolbar widgets to the newer GtkAction based
	widgets.

2006-02-27  Joshua Sled  <jsled@asynchronous.org>

	* src/backend/file/gnc-backend-file.h (struct FileBackend_struct):
	Remove unused `pricedb_lookup` and `export` operations from
	gnucash-specific file backend.

	* src/backend/file/gnc-backend-file.c (gnc_backend_new): Use
	correct 'export' function-slot, allowing File > Export > Export
	Accounts to work again.  Bug#332802.

	* src/gnome/gnc-plugin-basic-commands.c: Clarify "Export Accounts"
	from "Export Chart of Accounts [to QSF].

	* src/calculation/expression_parser.c (primary_exp): Fix infinite
	loop in parsing malformed functions (e.g. "ipmt(1:2:)"). Bug#332804.

	* src/app-utils/gnc-exp-parser.c (func_op): No longer crashes on